# argent

./: Cargo.toml  README.md  appmanifest.xml  build.rs
.github/workflows/: build.yml  test.yml
src/: main.rs  win.rs
