[package]
name = "argent"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"


[package.metadata.bundle]
identifier = "xz.tarball.argent"
copyright = "LICENSE"
short_description = "Extracts computer information :3"
long_description = """
Argent, named after the main character in Youjou Senki, is a program designed
to extract a computer's information, such as the product key, and relay it somewhere
"""

[package.metadata.winres]
FileDescription = "Extracts computer information :3"
ProductName = "Argent"
